# optima-matlab-test

./: .clang-format  CMakeLists.txt  README.md
cmake/: climate_build_version.h.in
include/: ert_main.cpp  rtwtypes.h  ventilation_embedded.cpp  ventilation_embedded.h  ventilation_embedded_data.cpp  zero_crossing_types.h
src/: ventilation_embedded.cpp
tests/: case2_onofffans_with_modulation_parameters.txt
